--- a/ArchitectureComponentsDemo/app/build.gradle
+++ b/ArchitectureComponentsDemo/app/build.gradle
@@ -18,6 +18,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    dataBinding {
+        enabled = true
+    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -31,6 +34,7 @@ dependencies {
         exclude group: 'com.google.code.findbugs'
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
+    compile "com.android.support:recyclerview-v7:25.3.1"
 //    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
     testCompile 'junit:junit:4.12'
     compile "android.arch.persistence.room:runtime:1.0.0-alpha3"
