--- a/ArchitectureComponentsDemo/app/build.gradle
+++ b/ArchitectureComponentsDemo/app/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile "com.android.support:recyclerview-v7:25.3.1"
+    compile "com.android.support:cardview-v7:25.3.1"
+    compile 'com.android.support:design:25.3.1'
 //    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
     testCompile 'junit:junit:4.12'
     compile "android.arch.persistence.room:runtime:1.0.0-alpha3"
