--- a/ArchitectureComponentsDemo/app/build.gradle
+++ b/ArchitectureComponentsDemo/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     compile "com.google.dagger:dagger:2.11-rc2"
     compile "com.google.dagger:dagger-android:2.11-rc2"
     compile "com.google.dagger:dagger-android-support:2.11-rc2"
+    compile 'org.apache.commons:commons-lang3:3.6'
 
     annotationProcessor "com.google.dagger:dagger-android-processor:2.11-rc2"
     annotationProcessor "com.google.dagger:dagger-compiler:2.11-rc2"
