--- a/ArchitectureComponentsDemo/app/build.gradle
+++ b/ArchitectureComponentsDemo/app/build.gradle
@@ -11,6 +11,12 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = ["room.schemaLocation":
+                             "$projectDir/schemas".toString()]
+            }
+        }
     }
     buildTypes {
         release {
@@ -39,19 +45,23 @@ dependencies {
     compile 'com.android.support:design:25.3.1'
 //    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
     testCompile 'junit:junit:4.12'
-    compile "android.arch.persistence.room:runtime:1.0.0-alpha3"
-    compile "android.arch.lifecycle:runtime:1.0.0-alpha3"
-    compile "android.arch.lifecycle:extensions:1.0.0-alpha3"
+    compile "android.arch.persistence.room:runtime:1.0.0-alpha4"
+    compile "android.arch.persistence.room:rxjava2:1.0.0-alpha4"
+    compile "android.arch.lifecycle:runtime:1.0.0-alpha4"
+    compile "android.arch.lifecycle:extensions:1.0.0-alpha4"
     compile "com.squareup.retrofit2:retrofit:2.2.0"
     compile "com.squareup.retrofit2:converter-gson:2.2.0"
+    compile'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
     compile "com.google.dagger:dagger:2.11-rc2"
     compile "com.google.dagger:dagger-android:2.11-rc2"
     compile "com.google.dagger:dagger-android-support:2.11-rc2"
     compile 'org.apache.commons:commons-lang3:3.6'
+    compile "io.reactivex.rxjava2:rxandroid:2.0.1"
+    compile "io.reactivex.rxjava2:rxjava:2.1.0"
 
     annotationProcessor "com.google.dagger:dagger-android-processor:2.11-rc2"
     annotationProcessor "com.google.dagger:dagger-compiler:2.11-rc2"
-    annotationProcessor "android.arch.persistence.room:compiler:1.0.0-alpha3"
-    annotationProcessor "android.arch.lifecycle:compiler:1.0.0-alpha3"
+    annotationProcessor "android.arch.persistence.room:compiler:1.0.0-alpha4"
+    annotationProcessor "android.arch.lifecycle:compiler:1.0.0-alpha4"
 
 }
