--- a/ArchitectureComponentsDemo/app/build.gradle
+++ b/ArchitectureComponentsDemo/app/build.gradle
@@ -19,6 +19,9 @@ android {
         }
     }
     buildTypes {
+        debug {
+            resValue("string", "PORT_NUMBER", "8081")
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -58,6 +61,8 @@ dependencies {
     compile 'org.apache.commons:commons-lang3:3.6'
     compile "io.reactivex.rxjava2:rxandroid:2.0.1"
     compile "io.reactivex.rxjava2:rxjava:2.1.0"
+
+    debugCompile 'com.amitshekhar.android:debug-db:1.0.1'
 
     annotationProcessor "com.google.dagger:dagger-android-processor:2.11-rc2"
     annotationProcessor "com.google.dagger:dagger-compiler:2.11-rc2"
