--- a/ArchitectureComponentsDemo/build.gradle
+++ b/ArchitectureComponentsDemo/build.gradle
@@ -2,9 +2,9 @@
 
 buildscript {
     repositories {
-        maven { url 'http://localhost:8081/artifactory/list/libs-release/'}
-//        jcenter()
-//        maven { url 'https://dl.google.com/dl/android/maven2/' }
+//        maven { url 'http://localhost:8081/artifactory/list/libs-release/'}
+        jcenter()
+        maven { url 'https://dl.google.com/dl/android/maven2/' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.3'
@@ -17,9 +17,9 @@ buildscript {
 
 allprojects {
     repositories {
-        maven { url 'http://localhost:8081/artifactory/list/libs-release/'}
-//        jcenter()
-//        maven { url 'https://dl.google.com/dl/android/maven2/' }
+//        maven { url 'http://localhost:8081/artifactory/list/libs-release/'}
+        jcenter()
+        maven { url 'https://dl.google.com/dl/android/maven2/' }
     }
 }
 
