--- a/ArchitectureComponentsDemo/app/build.gradle
+++ b/ArchitectureComponentsDemo/app/build.gradle
@@ -63,7 +63,15 @@ dependencies {
     compile "io.reactivex.rxjava2:rxandroid:2.0.1"
     compile "io.reactivex.rxjava2:rxjava:2.1.0"
 
+    compile 'com.github.eltos:simpledialogfragment:2.1'
+
     debugCompile 'com.amitshekhar.android:debug-db:1.0.1'
+
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5.1'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
+    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
+
+    compile 'ch.acra:acra:4.9.2'
 
     annotationProcessor "com.google.dagger:dagger-android-processor:2.11-rc2"
     annotationProcessor "com.google.dagger:dagger-compiler:2.11-rc2"
