--- a/ArchitectureComponentsDemo/app/build.gradle
+++ b/ArchitectureComponentsDemo/app/build.gradle
@@ -38,44 +38,63 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-        exclude group: 'com.google.code.findbugs'
-    })
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile "com.android.support:recyclerview-v7:25.3.1"
-    compile "com.android.support:cardview-v7:25.3.1"
-    compile 'com.android.support:design:25.3.1'
-//    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
-    testCompile 'junit:junit:4.12'
-    compile "android.arch.persistence.room:runtime:1.0.0-alpha5"
-    compile "android.arch.persistence.room:rxjava2:1.0.0-alpha5"
-    compile "android.arch.lifecycle:runtime:1.0.0-alpha5"
-    compile "android.arch.lifecycle:extensions:1.0.0-alpha5"
-    compile "com.squareup.retrofit2:retrofit:2.2.0"
-    compile "com.squareup.retrofit2:converter-gson:2.2.0"
-    compile'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
-    compile "com.google.dagger:dagger:2.11-rc2"
-    compile "com.google.dagger:dagger-android:2.11-rc2"
-    compile "com.google.dagger:dagger-android-support:2.11-rc2"
-    compile 'org.apache.commons:commons-lang3:3.6'
 
-    compile "io.reactivex.rxjava2:rxandroid:2.0.1"
-    compile "io.reactivex.rxjava2:rxjava:2.1.0"
+    androidTestCompile("com.android.support.test.espresso:espresso-core:$espresso_version", {
+        exclude group: 'com.android.support', module: 'support-annotations'
+        exclude group: 'com.google.code.findbugs', module: 'jsr305'
+    })
+    androidTestCompile "org.mockito:mockito-android:$mockito_version"
+
+
+    testCompile "junit:junit:$junit_version"
+
+    compile "com.android.support:appcompat-v7:$support_version"
+    compile "com.android.support:recyclerview-v7:$support_version"
+    compile "com.android.support:cardview-v7:$support_version"
+    compile "com.android.support:design:$support_version"
+//    compile "com.android.support.constraint:constraint-layout:$constraint_layout_version"
+
+    compile "android.arch.persistence.room:runtime:$arch_version"
+    compile "android.arch.persistence.room:rxjava2:$arch_version"
+    compile "android.arch.lifecycle:runtime:$arch_version"
+    compile "android.arch.lifecycle:extensions:$arch_version"
+    annotationProcessor "android.arch.persistence.room:compiler:$arch_version"
+    annotationProcessor "android.arch.lifecycle:compiler:$arch_version"
+    androidTestCompile("android.arch.core:core-testing:$arch_version", {
+    })
+    testCompile ("android.arch.core:core-testing:$arch_version", {
+        exclude group: 'com.android.support', module: 'support-compat'
+        exclude group: 'com.android.support', module: 'support-annotations'
+        exclude group: 'com.android.support', module: 'support-core-utils'
+    })
+
+
+    compile "com.squareup.retrofit2:retrofit:$retrofit_version"
+    compile "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    compile "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
+    testCompile "com.squareup.okhttp3:mockwebserver:$mockwebserver_version"
+
+
+    compile "com.google.dagger:dagger:$dagger_version"
+    compile "com.google.dagger:dagger-android:$dagger_version"
+    compile "com.google.dagger:dagger-android-support:$dagger_version"
+    annotationProcessor "com.google.dagger:dagger-android-processor:$dagger_version"
+    annotationProcessor "com.google.dagger:dagger-compiler:$dagger_version"
+
+    compile "org.apache.commons:commons-lang3:$commons_lang3_version"
+
+    compile "io.reactivex.rxjava2:rxandroid:$rxandroid_version"
+    compile "io.reactivex.rxjava2:rxjava:$rxjava_version"
+
+    debugCompile "com.squareup.leakcanary:leakcanary-android:$leakcanary_version"
+    releaseCompile "com.squareup.leakcanary:leakcanary-android-no-op:$leakcanary_version"
+    testCompile "com.squareup.leakcanary:leakcanary-android-no-op:$leakcanary_version"
+
+    compile "ch.acra:acra:$acra_version"
+
 
     compile 'com.github.eltos:simpledialogfragment:2.1'
-
     debugCompile 'com.amitshekhar.android:debug-db:1.0.1'
 
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5.1'
-    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
-    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
-
-    compile 'ch.acra:acra:4.9.2'
-
-    annotationProcessor "com.google.dagger:dagger-android-processor:2.11-rc2"
-    annotationProcessor "com.google.dagger:dagger-compiler:2.11-rc2"
-    annotationProcessor "android.arch.persistence.room:compiler:1.0.0-alpha5"
-    annotationProcessor "android.arch.lifecycle:compiler:1.0.0-alpha5"
 
 }
