--- a/ArchitectureComponentsDemo/build.gradle
+++ b/ArchitectureComponentsDemo/build.gradle
@@ -15,6 +15,21 @@ buildscript {
     }
 }
 
+ext.support_version = "25.3.1"
+ext.arch_version = "1.0.0-alpha5"
+ext.commons_lang3_version = "3.6"
+ext.dagger_version = "2.11-rc2"
+ext.retrofit_version = "2.2.0"
+ext.junit_version = "4.12"
+ext.constraint_layout_version = "1.0.4"
+ext.espresso_version = "2.2.2"
+ext.mockito_version = "2.7.19"
+ext.mockwebserver_version = "3.6.0"
+ext.rxjava_version = "2.1.0"
+ext.rxandroid_version = "2.0.1"
+ext.leakcanary_version = "1.5.1"
+ext.acra_version = "4.9.2"
+
 allprojects {
     repositories {
         maven { url 'http://localhost:8081/artifactory/list/libs-release/'}
